syntax = "proto3";

import "core/core.proto";

package colonio.Pubsub2DProtocol;

message Knock {
  core.Coordinate center = 1;
  double r = 2;
  uint64 uid = 3;
}

message Deffuse {
  core.Coordinate center = 1;
  double r = 2;
  uint64 uid = 3;
  string name = 4;
  core.Value data = 5;
  uint32 opt = 6;
}

message Pass {
  core.Coordinate center = 1;
  double r = 2;
  uint64 uid = 3;
  string name = 4;
  core.Value data = 5;
  uint32 opt = 6;
}

message PassFailure {
  uint32 reason = 1;
}
